tests/NormalTests/paczka1/fuzzy1/56853119.err
Error in line 1: mKn A926 49,9
Error in line 2: GE6m S827 73,2
Error in line 16: 7QoK9 A926 42,6
Error in line 36: mKn S61 221,7
